# MyRender-Engine

./: CMakeLists.txt  README.md
assets/teapot/: teapot.mtl
assets/woodplane/: woodplane.mtl
assets/woodplane2/: Untitled.mtl
include/: LoadShaders.hpp  camera.hpp  light.hpp  mesh.hpp  model.hpp  shadow_mapping.hpp  shadowmapper.hpp  utility.hpp
include/Interface/: UserInterface.hpp
include/Model/: AssimpAnimClip.hpp  AssimpBone.hpp  AssimpInstance.hpp  AssimpMesh.hpp  AssimpModel.hpp  AssimpNode.hpp
include/OpenGL/: IndexBuffer.hpp  OGLRenderData.hpp  OGLRenderer.hpp  ShaderStorageBuffer.hpp  VertexIndexBuffer.hpp
include/Physics_Component/: physics.hpp
include/Tools/: Camera.hpp
resources/: assimp_instance_matrix_mult.comp  assimp_instance_transform.comp  colors copy.vert  colors.frag  colors.vert  debug.frag  light_cube.frag  model.frag  model.vert
resources/shadow_mappin/: point_shadow.frag  point_shadow.geom  point_shadow.vert
resources/shadow_mappin/depth_shaders/: depth_shader.frag  depth_shader.vert
src/: LoadShaders.cpp  main.cpp  mesh.cpp  model.cpp  shadowmapper.cpp  shadowmapping.cpp  utility.cpp
src/Interface/: UserInterface.cpp
src/Model/: AssimpAnimChannel.cpp  AssimpAnimClip.cpp  AssimpBone.cpp  AssimpInstance.cpp  AssimpMesh.cpp  AssimpModel.cpp  AssimpNode.cpp
src/OpenGL/: Framebuffer.cpp  IndexBuffer.cpp  OGLRenderer.cpp  Shader.cpp  ShaderStorageBuffer.cpp  Texture.cpp  UniformBuffer.cpp  VertexIndexBuffer.cpp
src/Physics_Component/: physics.cpp
src/Tools/: Camera.cpp  Logger.cpp  Timer.cpp  Tools.cpp
